--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,77 +1,93 @@
+@import url("menu.css");
+
 * {
     margin: 0;
     padding: 0;
+    font-family: 'Courier New', Courier, monospace;
+}
+
+body {
+    width: 98%;
+    margin: auto;
 }
 
 .contenedor {
-    display: flex;
-    width: 98%;
-    flex-direction: row;
-    flex-wrap: wrap;
-    
-    padding: 10px;
+    display: grid;
+    /* Uso un atajo para definir tres filas / tres columnas */
+    grid-template: 1fr auto / 20% auto 20%; 
+
+    /* Distribuimos el contenido en cada fila */
+    grid-template-areas:  
+                         "izq contenido der" 
+                         "pie pie pie";
+
+    /* separamos los items con gap */
+    gap: 2%;
+
+    justify-content: center;
+    align-content: start;
+
+    margin-top: 100px;
 }
 
-header, aside, main, footer {
-    flex-grow: 1;     /* Todo crece hasta ocupar el ancho disponible */
-    flex-basis: 100%; /* Tamaño por defecto: 100% */
-    padding: 10px;
+.izq {
+    grid-area: izq;
 }
 
-header {
-    background-color: lightblue;
-    height: 100px;
-    justify-content: space-around;
-    align-content: center;
+.der{
+    grid-area: der;
 }
 
-aside {
-    background-color: aqua;
-}
-
-main {
-    background-color: aquamarine;
+.contenido {
+    grid-area: contenido;
     text-align: center;
 }
 
-footer {
-    background-color: blue;
+.contenido article {
+    padding-bottom: 25px;
+}
+
+.pie {
+    grid-area: pie;
     color: white;
 }
 
-/* media queries */
-/* tamaño tablet */
-@media all and (min-width: 600px){
-    aside {
-        /* flex: <flex-grow> <flex-shrink> <flex-basis> */
-        flex: 3 1 auto; /* <flex-grow> <flex-shrink> <flex-
-        basis>*/
-    }    
+.item {
+    padding: 5%;
+    color: #333;
+    background-color: lightblue;
 }
 
-/* tamaño pc */
-@media all and (min-width: 800px){
-    main {flex:6 0;}  /* <flex-grow> <flex-shrink> */
-    aside {order: 1;}
-    footer {order: 4;}
-    footer {background: #a6a6f7}
+
+
+/*----------------------------------------------------------------*/
+/* Punto de corte para pantallas tipo tablet                      */
+/*----------------------------------------------------------------*/
+@media only screen and (max-width: 800px) {
+    .contenedor {
+        /* Uso un atajo para definir 4 filas / 2 columna */
+        grid-template: auto auto 60px / 30% auto; 
+
+        /* Distribuimos el contenido en cada fila */
+        grid-template-areas: "izq contenido" "der der" "pie pie";
+    }
 }
 
-.navbar {
-    display: inline;
+
+/*----------------------------------------------------------------*/
+/* Punto de corte para pantallas tipo celular                     */
+/*----------------------------------------------------------------*/
+@media only screen and (max-width: 600px) {
+    .contenedor {
+        /* Uso un atajo para definir 6 filas / 1 columna */
+        grid-template: auto auto auto 60px / 100%; 
+
+        /* Distribuimos el contenido en cada fila */
+        grid-template-areas: "izq" "contenido" "der" "pie";
+    }
+    .logo {
+        width: 50px;
+        margin: 5px;
+    }
 }
 
-.navbar span {
-    padding: 5px;
-    background-color: rgba(255, 255, 255, 0.3);
-    color: black;
-    /* flex: <flex-grow> <flex-shrink> <flex-basis> */
-    flex: 1 3 35%;
-
-}
-
-.logo {
-    width: 100px;
-    padding: 10px;
-    
-}
