Agregando un div al index.html para hacer un banner o carrousel y modificaciones a estilos.css para el mismo

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -18,8 +18,9 @@ body {
 
     /* Distribuimos el contenido en cada fila */
     grid-template-areas:  
-                         "izq contenido der" 
-                         "pie pie pie";
+                        "banner banner banner"
+                        "izq contenido der" 
+                        "pie pie pie";
 
     /* separamos los items con gap */
     gap: 2%;
@@ -58,6 +59,11 @@ body {
     background-color: lightblue;
 }
 
+.banner{
+    grid-area: banner;
+    height: 45vh;
+    position: relative;
+}
 
 
 /*----------------------------------------------------------------*/
