--- a/css/estilos.css
+++ b/css/estilos.css
@@ -18,7 +18,6 @@ body {
 
     /* Distribuimos el contenido en cada fila */
     grid-template-areas:  
-                        "banner banner banner"
                         "izq contenido der" 
                         "pie pie pie";
 
@@ -59,18 +58,141 @@ body {
     background-color: lightblue;
 }
 
+/*----------------------------------------------------------------*/
+/* Configuración para el banner                                   */
+/*----------------------------------------------------------------*/
 .banner{
     grid-area: banner;
-    height: 45vh;
+    height: 70vh;
     position: relative;
+    max-width: 1200px;
+	margin: 0 auto;
+
 }
+
+@keyframes diapositiva {
+	0% { transform: translateX(0); }
+	10% { transform: translateX(0); }
+
+	15% { transform: translateX(-100%); }
+	30% { transform: translateX(-100%); }
+
+	35% { transform: translateX(-200%); }
+	50% { transform: translateX(-200%); }
+
+	55% { transform: translateX(-300%); }
+	70% { transform: translateX(-300%); }
+
+	75% { transform: translateX(-400%); }
+	90% { transform: translateX(-400%); }
+
+	95% { transform: translateX(-500%); }
+	100% { transform: translateX(-500%); }
+}
+
+/* * { box-sizing: border-box; } */
+
+html { scroll-behavior: smooth; }
+
+.diapositivas {
+	position: relative;
+	display: flex;
+	overflow: hidden;
+}
+
+.diapositiva {
+	width: 100vw;
+	flex-shrink: 0;
+	animation-name: diapositiva;
+	animation-duration: 20s;
+	animation-iteration-count: infinite;
+	animation-timing-function: linear;
+}
+
+.diapositivas:hover .diapositiva {
+	animation-play-state: paused;
+}
+
+.diapositiva img {
+	width: 100%;
+    height: 80vh;
+	vertical-align: top;
+}
+
+.diapositiva a {
+	width: 100%;
+	display: inline-block;
+	position: relative;
+}
+
+.leyenda {
+	/* width: 100vw; */
+    color: white;
+	text-shadow: 1px 1px black;
+	font-size: 8vw;
+	position: absolute;
+	bottom: 2vw;
+	right: 15vw;
+}
+
+.diapositiva:target {
+	animation-name: none;
+	position: absolute;
+	left: 0;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	z-index: 50;
+}
+
+.diapositivas-control {
+	position: absolute;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	text-align: center;
+	padding: 5px;
+	background-color: rgba(0,0,0,0.5);
+	z-index: 100;
+}
+
+.diapositivas-control li {
+	margin: 0 0.5rem;
+	display: inline-block;
+	vertical-align: top;
+}
+
+.diapositivas-control a {
+	display: inline-block;
+	vertical-align: top;
+	text-decoration: none;
+	color: white;
+	font-size: 1.5rem;
+}
+
+/* @media only screen and (min-width: 1200px) {
+	.diapositiva {
+		width: 1200px;
+	}
+
+	.leyenda {
+		font-size: 96px;
+		bottom: 96px;
+		right: 50px;
+	}
+}
+ */
+
+
+
+
 
 
 /*----------------------------------------------------------------*/
 /* Punto de corte para pantallas tipo tablet                      */
 /*----------------------------------------------------------------*/
 @media only screen and (max-width: 800px) {
-    .contenedor {
+    .contenedor { 
         /* Uso un atajo para definir 4 filas / 2 columna */
         grid-template: auto auto 60px / 30% auto; 
 
