--- a/css/estilos.css
+++ b/css/estilos.css
@@ -59,134 +59,95 @@ body {
 }
 
 /*----------------------------------------------------------------*/
-/* Configuración para el banner                                   */
+/* Inicio Configuración para el banner                                   */
 /*----------------------------------------------------------------*/
-.banner{
-    grid-area: banner;
-    height: 70vh;
-    position: relative;
-    max-width: 1200px;
-	margin: 0 auto;
 
-}
+* {box-sizing: border-box}
+/* body {font-family: Verdana, sans-serif; margin:0} */
+.mySlides {display: none}
+img {vertical-align: middle;}
 
-@keyframes diapositiva {
-	0% { transform: translateX(0); }
-	10% { transform: translateX(0); }
-
-	15% { transform: translateX(-100%); }
-	30% { transform: translateX(-100%); }
-
-	35% { transform: translateX(-200%); }
-	50% { transform: translateX(-200%); }
-
-	55% { transform: translateX(-300%); }
-	70% { transform: translateX(-300%); }
-
-	75% { transform: translateX(-400%); }
-	90% { transform: translateX(-400%); }
-
-	95% { transform: translateX(-500%); }
-	100% { transform: translateX(-500%); }
-}
-
-/* * { box-sizing: border-box; } */
-
-html { scroll-behavior: smooth; }
-
-.diapositivas {
+.slideshow-container {
+	max-width: 1000px;
 	position: relative;
-	display: flex;
-	overflow: hidden;
+	margin: auto;
 }
 
-.diapositiva {
-	width: 100vw;
-	flex-shrink: 0;
-	animation-name: diapositiva;
-	animation-duration: 20s;
-	animation-iteration-count: infinite;
-	animation-timing-function: linear;
-}
-
-.diapositivas:hover .diapositiva {
-	animation-play-state: paused;
-}
-
-.diapositiva img {
-	width: 100%;
-    height: 80vh;
-	vertical-align: top;
-}
-
-.diapositiva a {
-	width: 100%;
-	display: inline-block;
-	position: relative;
-}
-
-.leyenda {
-	/* width: 100vw; */
-    color: white;
-	text-shadow: 1px 1px black;
-	font-size: 8vw;
+.prev, .next {
+	cursor: pointer;
 	position: absolute;
-	bottom: 2vw;
-	right: 15vw;
+	top: 50%;
+	width: auto;
+	padding: 16px;
+	margin-top: -22px;
+	color: rgb(0, 0, 0);
+	font-weight: bold;
+	font-size: 18px;
+	transition: 0.6s ease;
+	border-radius: 0 3px 3px 0;
+	user-select: none;
 }
 
-.diapositiva:target {
-	animation-name: none;
-	position: absolute;
-	left: 0;
-	top: 0;
+.next {
 	right: 0;
-	bottom: 0;
-	z-index: 50;
+	border-radius: 3px 0 0 3px;
 }
 
-.diapositivas-control {
+.prev:hover, .next:hover {
+	background-color: rgba(0,0,0,0.8);
+}
+
+.text {
+	color: #000000;
+	font-size: 25px;
+	padding: 8px 12px;
 	position: absolute;
-	left: 0;
-	right: 0;
-	bottom: 0;
+	bottom: 8px;
+	width: 100%;
 	text-align: center;
-	padding: 5px;
-	background-color: rgba(0,0,0,0.5);
-	z-index: 100;
 }
 
-.diapositivas-control li {
-	margin: 0 0.5rem;
+.numbertext {
+	color: #f2f2f2;
+	font-size: 12px;
+	padding: 8px 12px;
+	position: absolute;
+	top: 0;
+}
+
+.dot {
+	cursor: pointer;
+	height: 15px;
+	width: 15px;
+	margin: 0 2px;
+	background-color: #bbb;
+	border-radius: 50%;
 	display: inline-block;
-	vertical-align: top;
+	transition: background-color 0.6s ease;
 }
 
-.diapositivas-control a {
-	display: inline-block;
-	vertical-align: top;
-	text-decoration: none;
-	color: white;
-	font-size: 1.5rem;
+.active, .dot:hover {
+	background-color: #717171;
 }
 
-/* @media only screen and (min-width: 1200px) {
-	.diapositiva {
-		width: 1200px;
-	}
-
-	.leyenda {
-		font-size: 96px;
-		bottom: 96px;
-		right: 50px;
-	}
+.fade {
+	animation-name: fade;
+	animation-duration: 1.5s;
 }
- */
+
+@keyframes fade {
+	from {opacity: .4} 
+	to {opacity: 1}
+}
+
+@media only screen and (max-width: 300px) {
+	.prev, .next,.text {font-size: 11px}
+}
 
 
-
-
-
+/*----------------------------------------------------------------*/
+/* Fin Configuración para el banner                                   */
+/*----------------------------------------------------------------*/
 
 /*----------------------------------------------------------------*/
 /* Punto de corte para pantallas tipo tablet                      */
