--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,6 @@
 @import url("menu.css");
 @import url("footer.css");
+@import url("especialidades.css");
 @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@500&family=Lato&display=swap');
 
 /* font-family: 'Cinzel', serif;
