--- a/css/especialidades.css
+++ b/css/especialidades.css
@@ -1,24 +1,24 @@
 .especialidades {
-    display: grid;
-    grid-template-columns: 45% 45%;
+    display: flex;
+    flex-wrap: wrap;
     gap: 1%;
+    justify-content: center;
+    row-gap: 1em;
 }
 
 .item-esp {
-    width: 100%;
+    width: 48%;
     display: inline-block;
     text-align: center;
     perspective: 150rem;
     position: relative;
-    height: 18rem;
-    max-width: 400px;
-    margin: 1rem;
-    box-shadow: none;
-    background: none;
+    height: 280px;
+    padding-bottom: 10px;
+    margin: auto;
 }
 
 .tarjeta {
-    height: 18rem;
+    height: 280px;
     border-radius: 1rem;
     transition: all 0.8s ease;
     backface-visibility: hidden;
@@ -26,7 +26,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    padding:2rem;
+    padding-bottom: 10px;
 }
 
 .tarjeta.fondo {
@@ -43,8 +43,8 @@
 }
 
 .tarjeta.frente img {
-    width: 95%;
-    padding-top: 1.5rem;
+    width: 85%;
+    padding-top: 1rem;
 }
 
 .tarjeta.frente p {
