--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,9 @@
 @import url("menu.css");
 @import url("footer.css");
 @import url("especialidades.css");
+@import url("faq.css");
+@import url("servicios.css");
+@import url("contacto.css");
 @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@500&family=Lato&display=swap');
 
 /* font-family: 'Cinzel', serif;
@@ -82,6 +85,7 @@ body {
 .destacado {
 	font-size: 1.5rem;
 	font-family: 'Cinzel', serif;
+	text-align: left;
 }
 
 .foto {
@@ -214,9 +218,6 @@ img {vertical-align: middle;}
 
 	}
 
-	.item {
-		
-	}
 }
 
 
@@ -234,10 +235,6 @@ img {vertical-align: middle;}
 		
     }
 
-	.item {
-		
-	}
-
 	.especialidades {
 		display: flex;
 		flex-wrap: wrap;
@@ -252,7 +249,7 @@ img {vertical-align: middle;}
 	}
 
 	.tarjeta.frente img {
-		width: 45%;
+		width: 55%;
 		padding-top: 1rem;
 	}
 	
